Fix styling spacing

--- a/app/webpacker/styles/call-to-action.scss
+++ b/app/webpacker/styles/call-to-action.scss
@@ -126,26 +126,11 @@
     overflow: visible;
 
     &:last-child .call-to-action__image {
-      background-position: 70%;
+      background-position: 100%;
     }
 
     .badge {
       transform: translate(-50%, -50%);
-    }
-
-    .call-to-action__icon__container {
-      @include reset;
-
-      grid-area: 1 / 1 / 3 / 2;
-
-      margin: 1em auto auto 0;
-      padding-left: .2em;
-      background-color: $yellow;
-      display: inline-block;
-
-      .call-to-action__icon {
-        background: transparent;
-      }
     }
 
     .call-to-action__heading {
@@ -171,10 +156,10 @@
 
     .call-to-action__image {
       @include reset;
-      grid-area: 2 / 2 / 5 / 3;
+      grid-area: 1 / 2 / 6 / 5;
       background-position: center;
       background-size: cover;
-      margin: 30px 0;
+      margin: 0px 0;
     }
 
     @include mq($until: tablet) {
